fixes wordwrap in navbar li 'ADD POINTS'

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -86,6 +86,7 @@ nav {
 
 .container-nav-list li {
     font-size: 1.4rem;
+    white-space: nowrap;
 }
 
 .container-nav-list a {
